# deeplrn-hqcqnn-breast-cancer

./: README.md  main.py  pyproject.toml
configs/: base.yml
scripts/: run_cell.py
src/: dataset.py  middle_layers.py  preprocessing.py
src/qcqcnn/: datamodule.py  dataset.py  lightning_module.py  middle_layers.py  quantum_filter.py  vqc_head.py
src/utils/: logger.py  yaml_config_reader.py  yaml_reader.py
