[project]
name = "hqcnn-breast-cancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.5",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=5.0.0.93",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "pydicom>=3.0.2",
    "pytorch-lightning>=2.6.5",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "qiskit-aer-gpu>=0.15.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
]
